# gmenu2x-zipit

data/: Makefile.am
data/platform/zipitz2/: gmenu2x.sh  input.conf
data/platform/zipitz2/scripts/: ipstatus  launch  shell.sh  wifi-scan  wpa-connect
data/platform/zipitz2/sections/applications/: bard  blkmp3  finch  links  mplayer  pianobar  rockbox  streamripper
data/platform/zipitz2/sections/games/: Nethack  duke-nuke-em
data/platform/zipitz2/sections/settings/: README
data/platform/zipitz2/sections/terminals/: ash  bash  htop  nano
data/platform/zipitz2/sections/utilities/: eject
src/: browsedialog.cpp  gmenu2x.cpp  gmenu2x.h  imageio.cpp  inputdialog.cpp  inputmanager.cpp  inputmanager.h  linkapp.cpp  linkapp.h  messagebox.cpp  surface.cpp  surface.h
